src/discrete-layer/components/layer-details/layer-details.css
.categoryFieldsParentContainer {
  /* This value is default. the real value comes from 'NUMBER_OF_CHARACTERS_LIMIT' in config, */
  /* and set in layer-details.tsx                                                             */
  
  --field-label-max-length: 18ch
}

.categoryFieldsParentContainer {
  display: flex;
  flex-wrap: wrap;
  margin-top: 16px;
  padding: 10px;
}

.categoryFieldsTitle {
  flex: 100%;
  color: var(--mdc-theme-text-icon-on-dark, #fff);
  font-size: 16px;
  font-weight: 600;
}

.categoryFieldsContainer {
  display: flex;
  flex-wrap: wrap;
  flex: 100%;
  margin-bottom: 8px;
  align-items: center;
  justify-content: space-between;
}

.categoryField {
  width: 45%;
  padding: 4px 0;
  display: flex;
  margin: 0;
  box-sizing: border-box;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.categoryFullWidthField {
  flex: 100%;
  padding: 2px 0;
  display: flex;
}

.detailsFieldLabel {
  display: flex;
  color: var(--mdc-theme-text-icon-on-dark);
  width: var(--field-label-max-length);
  overflow: hidden;
}

.detailsFieldLabel > span {
  min-width: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.detailsFieldValue {
  color: var(--mdc-theme-text-primary-on-dark);
  text-overflow: ellipsis;
  word-break: break-all;
  position: relative;
  overflow: hidden;
  flex: 1 1;
  padding: 0 1px;
  text-align: left;
}

body[dir='rtl'] .detailsFieldValue {
  text-align: right;
}

.detailFieldCopyable {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  direction: ltr;
}

.detailsFieldCopyIcon {
  margin: 0 16px;
  height: 20px;
}

.noSelection {
  padding-top: 20px;
  text-align: center;
}

.textFieldInfoList {
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: left;
}

body[dir='rtl'] .textFieldInfoList {
  text-align: right;
}

.textFieldInfoIcon {
  color: var(--mdc-theme-primary);
  cursor: help;
  position: absolute;
  right: 2px;
  top: 50%;
  transform: translateY(-50%);
}

body[dir='rtl'] .textFieldInfoIcon {
  margin-left: unset;
  right: unset;
  left: 2px;
}

.detailsThumbnail {
  width: 96%;
  margin-top: 16px;
}

